2.2 Release ??? 2013

* Greatly speed up consequent FFT and Hankel transforms. Add mgl_clear_fft() function for manual clearing of saved FFT/Hankel data. 
* Add Quality=8 for dots drawing (extremely fast), Quality=9 for none drawing (for testing speed)
* Add styles '4','6','8' for Cone() and Cones() to produce square, hex, octo-prism
* Add style 't' for Cones() to produce tubes (cylinders)
* Add transparency for Area() and Region() plots
* Improve/change lighting from local sources. Add SetDiffuse() function
* Enable line width for Mesh() and Fall() plots
* Add manual compression of JSON
* Define WORDS_BIGENDIAN and HAVE_MEMRCHR (thanks to Dinar Valeev)
* Bugfix for cleaning unused points
* Fix 'setsize' command at UDAV starting
* Rewrite MGL parsing by using std::wstring for avoiding possible bugs of wcs*() functions
* Minor bugfixes
* Update docs

2.1.3.1 Released 8 May 2013

* Compatibility changes for MS VS.
* Bugfixes for cmake options enable-double=OFF, enable-zlib=OFF.
* Enable mouse actions for Firefox in JS sample.

2.1.3 Released 2 May 2013

* Functions SinFFT, CosFFT, Hankel and so on, become multi-threaded
* Use DFT instead of FFT if GSL support is disabled (much slow!).
* Add Join() function for joining mglData arrays
* Add Roots() function for root finding of nonlinear equation using provided guess(es)
* Add mglExprC for parsing formula with complex numbers
* Correctly read #QNAN values in data files
* Speed up Dots() drawing
* Add flag to disable tick labels at axis origin (see SetOriginTick())
* Add MGL commands 'origintick', 'tickshift'
* WriteJSON now use zlib if filename end at 'z' (like "test.jsonz")
* Make separate libmgl-mpi
* Add SetAutoRanges() function (duplicate corresponding options)
* Add JSON sample usage via QtWebKit (thanks to DATADVANCE)
* Bugfixes and memory leaks

2.1.2 Released 28 January 2013

* Exclude "local" functions from resulting library.